force-app/main/default/objects/B3_Account_Contact_Relationship__c/B3_Account_Contact_Relationship__c.object-meta.xml
<CustomObject>
    <description>B3 Account-Contact Relationship</description>
    <label>B3 Account-Contact Relationship</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B3 Account-Contact Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>