force-app/main/default/objects/B3_Account_Contact_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which account is contact associated with?</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>B3 Account-Contact Relationships</relationshipLabel>
    <relationshipName>B3_Account_Contact_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>