force-app/main/default/objects/B3_Account_Contact_Relationship__c/fields/Buyer_Role__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Role__c</fullName>
    <inlineHelpText>What role does the contact have in the buying decision?</inlineHelpText>
    <label>Buyer Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business User</fullName>
                <default>true</default>
                <label>Business User</label>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>Economic Decision Maker</fullName>
            </value>
            <value>
                <fullName>Evaluator</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Technical Buyer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Player</fullName>
            </value>
            <value>
                <fullName>Promoter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>