force-app/main/default/objects/B3_Account_Contact_Relationship__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which Contact is this relationship associated with?</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>B3 Account-Contact Relationships</relationshipLabel>
    <relationshipName>B3_Account_Contact_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>