force-app/main/default/objects/B3_Account_Contact_Relationship__c/fields/How_do_we_knew_Contract__c.field-meta.xml
<CustomField>
    <fullName>How_do_we_knew_Contract__c</fullName>
    <inlineHelpText>How do we know the contact?</inlineHelpText>
    <label>How do we knew Contract</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>