force-app/main/default/objects/B3_Account_Contact_Relationship__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which Partner, if any, is related to this record</inlineHelpText>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>B3 Account-Contact Relationships (Partner)</relationshipLabel>
    <relationshipName>B3_Account_Contact_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>