force-app/main/default/objects/B3_Account_Contact_Relationship__c/fields/Receptivity__c.field-meta.xml
<CustomField>
    <fullName>Receptivity__c</fullName>
    <label>Receptivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Supporter</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Intrigued</fullName>
            </value>
            <value>
                <fullName>Indifferent</fullName>
            </value>
            <value>
                <fullName>Reluctant</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>