force-app/main/default/objects/B3_Account_Contact_Relationship__c/fields/Relationship_Strength__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Strength__c</fullName>
    <inlineHelpText>What is the strength of the relationship?</inlineHelpText>
    <label>Relationship Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neutral</fullName>
                <default>true</default>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
            <value>
                <fullName>Strong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>