force-app/main/default/objects/B3_Account_Contact_Relationship__c/fields/Why_are_we_reaching_out__c.field-meta.xml
<CustomField>
    <fullName>Why_are_we_reaching_out__c</fullName>
    <inlineHelpText>Why are we reaching out - ID services we want to sell</inlineHelpText>
    <label>Why are we reaching out</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>